force-app/main/default/objects/LLC_BI__Deposit__c/fields/cm_Applying_with_a_co_applicant__c.field-meta.xml
<CustomField>
    <fullName>cm_Applying_with_a_co_applicant__c</fullName>
    <label>Applying with a co-applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>