force-app/main/default/objects/LLC_BI__Deposit__c/fields/cm_External_FI_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>cm_External_FI_Account_Number__c</fullName>
    <label>External FI Account Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>