force-app/main/default/objects/LLC_BI__Deposit__c/fields/cm_Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>cm_Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true for any deposit submitted online that is the primary deposit record in an application submission.  Do not manually edit this field.</description>
    <inlineHelpText>This field is set to true for any deposit submitted online that is the primary deposit record in an application submission.  Do not manually edit this field.</inlineHelpText>
    <label>Is Primary? (Online DAO Only)</label>
    <type>Checkbox</type>
</CustomField>