force-app/main/default/objects/LLC_BI__Deposit__c/fields/cm_Mailing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>cm_Mailing_Address_Line_1__c</fullName>
    <label>Mailing Address Line 1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>