force-app/main/default/objects/LLC_BI__Deposit__c/fields/cm_Mailing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>cm_Mailing_Address_Line_2__c</fullName>
    <label>Mailing Address Line 2</label>
    <length>127</length>
    <type>Text</type>
</CustomField>