force-app/main/default/objects/LLC_BI__Deposit__c/fields/Declination_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Declination_Notice_Date__c</fullName>
    <description>A date/time stamp of when the applicant was provided with the declination notice.</description>
    <inlineHelpText>This is auto-populated when the deposit was applied or via Online Application.</inlineHelpText>
    <label>Declination Notice Date</label>
    <type>DateTime</type>
</CustomField>