force-app/main/default/objects/LLC_BI__Deposit__c/fields/Deposit_Total_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Total_Current_Balance__c</fullName>
    <label>Deposit Total Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>