force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHCompDiscrData__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHCompDiscrData__c</fullName>
    <description>The Users populate this optional text field to capture company discretionary data. By default, it is blank.</description>
    <label>Company Discretionary</label>
    <length>20</length>
    <type>Text</type>
</CustomField>