force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHCompEntryDesc__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHCompEntryDesc__c</fullName>
    <description>The Users populate this optional text field to capture company entry description. By default, it is blank.</description>
    <label>Company Entry Desc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>