force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHCompName__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHCompName__c</fullName>
    <description>The Users populate this optional text field with the ACH Company Name. By default, it is blank.</description>
    <label>Company Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>