force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHCrName__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHCrName__c</fullName>
    <description>The Users populate this optional text field with the account hoolders name of the credit account for the ACH item. By default, it is blank.</description>
    <label>Individual Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>