force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHCrRtNum__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHCrRtNum__c</fullName>
    <description>The Users populate this optional text field with routing number of the credit account&apos;s bank for the ACH item. By default, it is blank.</description>
    <label>Credit Bank Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>