force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHSendPreNoteCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHSendPreNoteCode__c</fullName>
    <description>The Users populate this optional text field that determines if an ACH prenotification should be generated. By default, it is blank.</description>
    <label>Send Prenotice</label>
    <length>1</length>
    <type>Text</type>
</CustomField>