force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHStdEntryClass__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHStdEntryClass__c</fullName>
    <description>The Users populate this optional text field with the ACH standard entry class. By default, it is blank.</description>
    <label>Standard Entry Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARC</fullName>
                <label>Accounts Receivable Entry</label>
            </value>
            <value>
                <fullName>COR</fullName>
                <label>Automated Notification of Change</label>
            </value>
            <value>
                <fullName>CCD</fullName>
                <label>Cash Concentration and Disbursement</label>
            </value>
            <value>
                <fullName>CTX</fullName>
                <label>Corporate Trade Exchange</label>
            </value>
            <value>
                <fullName>CBR</fullName>
                <label>Cross Border Entry</label>
            </value>
            <value>
                <fullName>CIE</fullName>
                <label>Customer Initiated Entry</label>
            </value>
            <value>
                <fullName>WEB</fullName>
                <label>Internet-Initiated Entry</label>
            </value>
            <value>
                <fullName>MTE</fullName>
                <label>Machine Transfer Entry</label>
            </value>
            <value>
                <fullName>POP</fullName>
                <label>Point-of-Purchase Entry</label>
            </value>
            <value>
                <fullName>POS</fullName>
                <label>Point-of-Sale Entry</label>
            </value>
            <value>
                <fullName>PPD</fullName>
                <label>Prearranged Payment and Deposit</label>
            </value>
            <value>
                <fullName>RCK</fullName>
                <label>Re-presented Check Entry</label>
            </value>
            <value>
                <fullName>TEL</fullName>
                <label>Telephone-Initiated Entry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>