force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__ACHTrnCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__ACHTrnCode__c</fullName>
    <description>The Users populate this optional text field with the transaction code to be used for the ACH item. By default, it is blank.</description>
    <label>Credit Tran Code</label>
    <length>17</length>
    <type>Text</type>
</CustomField>