force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__Additional_Name_1__c.field-meta.xml
<CustomField>
    <fullName>JHJX__Additional_Name_1__c</fullName>
    <description>The User populates this optional text field to capture any special titling for an account. By default, it is blank.</description>
    <label>Additional Name #1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>