force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__Club_Transfer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>JHJX__Club_Transfer_Account_Number__c</fullName>
    <description>The User populates this optional text field to capture the Account Number of the account that the Club funds will be transferred to. By default, it is blank.</description>
    <label>Club Transfer Account Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>