force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__IntDisp__c.field-meta.xml
<CustomField>
    <fullName>JHJX__IntDisp__c</fullName>
    <description>The Users populate this optional picklist field to define the the disposition of interest. By default, it is blank.</description>
    <label>Disposition of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AddBackToAcct</fullName>
                <label>Add Back To Account</label>
            </value>
            <value>
                <fullName>DepToAcct</fullName>
                <label>Deposit To Account</label>
            </value>
            <value>
                <fullName>PayByACH</fullName>
                <label>Pay By ACH</label>
            </value>
            <value>
                <fullName>PayByChk</fullName>
                <label>Pay By Check</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>