force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__IntDispAcctType__c.field-meta.xml
<CustomField>
    <fullName>JHJX__IntDispAcctType__c</fullName>
    <description>The Users populate this optional picklist field to define interest disbursement account types. By default, it is blank.</description>
    <label>Interest Disbursement Account Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Checking</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Savings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>