force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__isRenewal__c.field-meta.xml
<CustomField>
    <fullName>JHJX__isRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>