force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__OffCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__OffCode__c</fullName>
    <description>The Users populate this optional field to define the Officer Code.  By default, it is blank.</description>
    <label>Officer Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>