force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__PlnCvrgType__c.field-meta.xml
<CustomField>
    <fullName>JHJX__PlnCvrgType__c</fullName>
    <description>The Users populate this optional picklist field to define HSA Account Type. By default, it is blank.</description>
    <label>HSA Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fam</fullName>
                <label>Family</label>
            </value>
            <value>
                <fullName>Indv</fullName>
                <label>Individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>