force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__RsStat__c.field-meta.xml
<CustomField>
    <fullName>JHJX__RsStat__c</fullName>
    <label>Pass/Fail Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>