force-app/main/default/objects/LLC_BI__Deposit__c/fields/JHJX__TrnRcptId__c.field-meta.xml
<CustomField>
    <fullName>JHJX__TrnRcptId__c</fullName>
    <label>Transaction ID</label>
    <length>21</length>
    <type>Text</type>
</CustomField>