force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Application__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional and can be collected as part of a workflow. This field is used to specify (via lookup) the application record associated to the deposit and relationship the deposit is linked to.</description>
    <label>Application</label>
    <referenceTo>LLC_BI__Application__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>