force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Appointee_Capacity_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Appointee_Capacity_Description__c</fullName>
    <description>Fiduciary or Estate Appointed Party Capacity</description>
    <inlineHelpText>Capacity of a designated appointee, often by court order/will. Acts for a fiduciary or estate account ward. Capacity identified by court order/legal document as guardian, conservator, or legal representative. Captured once and applied to appointee(s).</inlineHelpText>
    <label>Appointee Capacity Description</label>
    <type>TextArea</type>
</CustomField>