force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Billing_Frequency_Other__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billing_Frequency_Other__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It describes the frequency with which the safe deposit box rent amount is debited from the account.</description>
    <inlineHelpText>Describes the frequency with which the safe deposit box rent amount will be debited from the account.</inlineHelpText>
    <label>Billing Frequency Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>