force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Certificate_Number__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It represents the number of the certificate of deposit (CD). This is used when a CD has an account number and a certificate number.</description>
    <inlineHelpText>The number of the Certificate of Deposit. This is used when a certificate of deposit has an account number and a certificate number.</inlineHelpText>
    <label>Certificate Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>