force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Contact__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set when creating a deposit in the New Deposit Workflow. This field is a lookup to the contact associated with the deposit.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>