force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Default_App__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Default_App__c</fullName>
    <description>The system populates this text field to display Deposit pages on a Deposit record through a workflow.</description>
    <inlineHelpText>The system populates this text field through a workflow.</inlineHelpText>
    <label>Default App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>