force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Description_of_Keys__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description_of_Keys__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is a description of any safe deposit box keys that have been issued.</description>
    <inlineHelpText>A description of any safe deposit box keys that have been issued.</inlineHelpText>
    <label>Description of Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>