force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Distribution_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Start_Date__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the starting date for the periodic distributions.</description>
    <inlineHelpText>The starting date for the periodic distributions.</inlineHelpText>
    <label>Distribution Start Date</label>
    <type>Date</type>
</CustomField>