force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__E_Disclosures_And_Statement_Consent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__E_Disclosures_And_Statement_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field to indicate they give consent to receive electronic disclosures regarding periodic account statements. By default, it is false.</description>
    <inlineHelpText>Select this checkbox to give consent to receive electronic disclosures regarding periodic account statements.</inlineHelpText>
    <label>E Disclosures And Statement Consent</label>
    <type>Checkbox</type>
</CustomField>