force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Electronic_Notice_Delivery_Consent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Electronic_Notice_Delivery_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field to indicate the Electronic Procedure Disclosure should include disclosures for the electronic delivery of documents and notices. This content also automatically populates in the disclosure if the same content was previously included in the associated Terms and Conditions policy. By default, the field is false.</description>
    <inlineHelpText>Select this checkbox if the Electronic Procedure Disclosure should include disclosures for electronic documents and notices. This content also automatically populates in the disclosure if previously included in the associated Terms and Conditions policy.</inlineHelpText>
    <label>Electronic Notice Delivery Consent</label>
    <type>Checkbox</type>
</CustomField>