force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Exclude_Transaction_Account_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude_Transaction_Account_Disclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field if the account type or account holder is excluded from coverage under the Minnesota Transaction Account Application Disclosure requirement. This is only applicable to users in Minnesota. By default, it is false.</description>
    <inlineHelpText>Select this field if the account type or account holder is excluded from coverage under the Minnesota Transaction Account Application Disclosure requirement. This is only applicable to users in Minnesota.</inlineHelpText>
    <label>Exclude Transaction Account Disclosure</label>
    <type>Checkbox</type>
</CustomField>