force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Five_Year_Period_Ends_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Five_Year_Period_Ends_Year__c</fullName>
    <description>TThis field is optional and can be collected as part of a workflow. It is the year in which the five year period ends.</description>
    <inlineHelpText>The year in which the five year period will end.</inlineHelpText>
    <label>Five Year Period Ends Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>