force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Frequency_of_Distributions__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency_of_Distributions__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies the frequency of the periodic distributions.</description>
    <inlineHelpText>Specifies the frequency of the periodic distributions.</inlineHelpText>
    <label>Frequency of Distributions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>