force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Index_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index_Name__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. This item indicates the name of the index tied to the variable rate account.</description>
    <inlineHelpText>This item indicates the name of the index tied to the variable rate account.</inlineHelpText>
    <label>Index Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>