force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Inherited_IRA__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Inherited_IRA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inherited IRA</description>
    <inlineHelpText>This indicates whether the plan is an inherited IRA. An IRA is inherited when the original owner of the IRA dies and ownership of the IRA passes to the named beneficiary of the original IRA.</inlineHelpText>
    <label>Inherited IRA</label>
    <type>Checkbox</type>
</CustomField>