force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Initial_Rate_Period_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Rate_Period_Number__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the initial rate is in effect.</description>
    <inlineHelpText>The number of periods that the initial rate will be in effect.</inlineHelpText>
    <label>Initial Rate Period Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>