force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Initial_Rate_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Rate_Period_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the initial rate applies.</description>
    <inlineHelpText>Specifies the period of time the initial rate will apply.</inlineHelpText>
    <label>Initial Rate Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Year(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>